syntax = "proto3";

package proto;

option go_package = ".;cache";

service Cache {
    rpc Get (CacheGetRequest) returns (CacheGetResponse);
    rpc Set (CacheSetRequest) returns (CacheSetResponse);
}

message CacheGetRequest {
    string key = 1;
}

message CacheGetResponse {
    string value = 1;
}

message CacheSetRequest {
    string key = 1;
    string value = 2;
}

message CacheSetResponse {

}